[package]
name = "plexspaces-persistence"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Event sourcing and state persistence"

[dependencies]
# Journal/Persistence only depends on proto and mailbox
plexspaces-proto = { workspace = true }
plexspaces-mailbox = { workspace = true }

# Core dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
md5 = "0.7"
bytes = "1.5"
bincode = "1.3"

# Compression
snap = "1.1"  # Snappy compression
zstd = "0.13"  # Zstd compression

# Encryption
aes-gcm = "0.10"  # AES-256-GCM authenticated encryption
rand_core = "0.6"  # For nonce generation
hex = "0.4"  # Hex encoding/decoding for keys

[dev-dependencies]
tokio-test = { version = "0.4" }
pretty_assertions = { version = "1.4" }
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
rand = "0.8"

[[bench]]
name = "persistence_benchmarks"
harness = false

[lib]
name = "plexspaces_persistence"
path = "src/lib.rs"
