[package]
name = "plexspaces-proto"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Protocol buffer definitions and generated code for PlexSpaces"

[dependencies]
# gRPC and Protocol Buffers
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

[build-dependencies]
tonic-build = { version = "0.10", features = ["prost"] }
prost-build = { workspace = true }

[lib]
name = "plexspaces_proto"
path = "src/lib.rs"